# Leg

./: .gitignore  CMakeLists.txt  FastWalk.cpp  FastWalk.h  LegKinematics.cpp  LegKinematics.h  TimeOptimalMotion.cpp  TimeOptimalMotion.h  main.cpp
ProjectFile/: CMakeLists.txt
